--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="utf-8" />
+        <title>Curso Git e Github</title>
+    </head>
 
+    <body>
+        <h2>Minha página inicial</h2>
+    </body>
+</html>
